OVS-275 - Corrected layout on smaller browser windows

--- a/webapps/frontend/css/ovs.css
+++ b/webapps/frontend/css/ovs.css
@@ -14,13 +14,22 @@ div[data-view] {
 
 .wrapper {
     min-height: 100%;
-    height: auto !important; /* Required for semi-sticking footer */
-    height: 100%;
-    margin: 0 auto -60px;
+    height: auto;
 }
 
 .footer {
-    height: 50px;
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 60px;
+    margin-top: -60px;
+}
+
+.page-host {
+    position: static !important;  /* Negate default durandal css */
+    top: auto !important;         /* Negate default durandal css */
+    padding-top: 70px;
+    padding-bottom: 60px;
 }
 
 .hand {
